Fix footer items width overflow

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -15,12 +15,10 @@ footer .contact-me-container {
 footer .contact-me {
     display: flex;
     align-items: center;
-    padding: 0 1rem 1rem 1rem;
-    margin: 0 1rem 1rem 1rem;
 }
 
 footer .contact-me img {
-    width: 4rem;
+    width: 2rem;
 }
 
 footer .contact-me span {
